objects/ChemCare__c.object
<CustomObject>
    <fields>
        <fullName>ServiceProvider__c</fullName>
        <label>Service Provider</label>
        <picklist>
            <picklistValues>
                <fullName>Advanced Waste</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGFA Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agmet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Waste</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amerifuel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMS Environmental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aristech Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ash Grove Cement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ashland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-Tech Recycling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ausimont USA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barton Solvents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beaver Oil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blacklidge Emulsions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brenntag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridgeport United Recycling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burlington Environmental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casie Ecology Oil Salvage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chem Con-Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical Pollution Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical Solvents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical Waste Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chem-Pak Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemtron</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chesapeake Waste Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Wastes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clean Harbors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coleman</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Provider_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Provider</label>
        <referenceTo>Vendor__c</referenceTo>
        <relationshipLabel>Waste Streams (Service Provider Lookup)</relationshipLabel>
        <relationshipName>Waste_Streams1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UCodes__c</fullName>
        <label>U Codes</label>
        <picklist>
            <picklistValues>
                <fullName>U001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U021</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U022</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U023</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U024</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U025</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U026</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U027</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U028</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U029</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U030</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U031</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UserLastModifiedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to last non-System Admin to modify this CPP. Modifiable by Apex only.</description>
        <label>User Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Waste_Streams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UserLastModifiedDate__c</fullName>
        <description>Non-Admin user who last modified this record.</description>
        <label>User Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WasteStreamName__c</fullName>
        <label>Waste Stream Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
</CustomObject>